# distantspeechrecognition-mirror

asr/: Doxyfile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  asr.pc.in  autogen.sh  class.cfg  config.h.in  configure  configure.in  mainpage.cc  patch.sh  swig_rules
asr/adapt/: Makefile.am  Makefile.in  adapt.i  codebookAdapt.cc  codebookAdapt.h  transform.cc  transform.h
asr/autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
asr/debian/: README.debian  changelog  control  copyright  libasr1.files  rules
asr/decoder/: Makefile.am  Makefile.in  decoder.cc  decoder.h  decoder.i  wfstFlyWeight.cc  wfstFlyWeight.h
asr/dictionary/: .cvsignore  Makefile.am  Makefile.in  dict.i  dictionary.cc  dictionary.h  distribTree.cc  distribTree.h  phones.cc  phones.h  tags.cc  tags.h  words.cc  words.h
asr/doc/: Makefile  chapter01.xml  chapter02.xml  docbook.chapter.xml  millennium-book.xml
asr/foo/: README  foo.cc  foo.h  foo.i
asr/fsm/: Makefile.am  Makefile.in  fsm.cc  fsm.h  fsm.h.ps  fsm.i  skhash.cc  skhash.h
asr/gaussian/: Makefile.am  Makefile.in  codebookBasic.cc  codebookBasic.h  distribBasic.cc  distribBasic.h  gaussian.i  test.py
asr/lattice/: Makefile.am  Makefile.in  lattice.cc  lattice.h  lattice.i
asr/lib/: Makefile.in
asr/natural/: Makefile.am  Makefile.in  natural.cc  natural.h  natural.i
asr/path/: Makefile.am  Makefile.in  codebookPath.cc  codebookPath.h  distribPath.cc  distribPath.h  path.i
asr/sat/: Makefile.am  Makefile.in  cluster.cc  cluster.h  codebookFastSAT.cc  codebookFastSAT.h  sat.cc  sat.h  sat.i
asr/test/: Lexicon.txt  cbkTest.py  contextTest.py  decodeTest.py  featureStreamTest.py  fsmTest.py  testCbk.py  testDict.py  testDistribTree.py
asr/textGrid/: textgrid.py
asr/train/: Makefile.am  Makefile.in  codebookTrain.cc  codebookTrain.h  distribTrain.cc  distribTrain.h  estimateAdapt.cc  estimateAdapt.h  fsa.cc  fsa.h  stateClustering.cc  stateClustering.h  train.i
btk/: AUTHORS  Doxyfile  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  btk.h.in  btk.pc.in  configure  configure.in  cvsignore  mainpage.cc  patch.sh  swig_rules
btk/TDEstimator/: CCTDE.cc  CCTDE.h  Makefile.am  Makefile.in  TDEstimator.i  tdoa.py
btk/autom4te.cache/: output.1  requests  traces.0  traces.1
btk/beamformer/: Makefile.am  Makefile.in  beamformer.cc  beamformer.h  beamformer.i  modalBeamformer.cc  modalBeamformer.h  spectralinfoarray.h  taylorseries.cc  tracker.cc  tracker.h
btk/blind/: blind.cc  blind.h  blind.i  blind_wrap.cxx
btk/cancelVP/: Makefile.am  Makefile.in  cancelVP.cc  cancelVP.h  cancelVP.i
btk/common/: Makefile.am  Makefile.in  common.cc  common.h  common.i  error.c  error.h  jexception.cc  jexception.h  jpython_error.h  mach_ind_io.cc  mach_ind_io.h  memoryManager.cc  memoryManager.h  mlist.h  refcount.cc  refcount.h
btk/convolution/: Makefile.in  convolution.cc  convolution.h  convolution.i  correlate.py
btk/debian/: README.debian  changelog  control  info.ex  libbtk1.files  manpage.1.ex  rules
btk/dereverberation/: Makefile.am  Makefile.in  dereverberation.cc  dereverberation.h  dereverberation.i
btk/driver/: Makefile.am  Makefile.in  databuffers.cc  driver.i  feature.py  mk4_common.h  mk4_misc.cc  mk4_misc.h  mk4array.cc  mk4array.h  mk4cursor.cc  mk4cursor.h  mk4cursor_type.h  mk4error.cc  mk4error.h  mk4lib.cc  mk4lib.h  mk4lib_int.h  mk4msg.cc  mk4msg.h  mk4msg_type.h
btk/examples/GGDEstimation/: makeFbinList.py  utils.py  (+4 more)
btk/feature/: Makefile.am  Makefile.in  audioIO.cc  audioIO.h  feature.cc  feature.h  feature.i  fopen.h  lpc.cc  lpc.h  myList.h  spectralestimator.cc  spectralestimator.h  videofeature.cc  videofeature.h
btk/gnulib/: Makefile.am  Makefile.in
btk/include/: Makefile.in  complex.i  jexception.i  matrix.i  typedefs.i  vector.i
btk/lib/: Makefile.in  mkBeamforming.py  mnBeamforming.py
btk/lms/: Makefile.in  lms.cc  lms.h  lms.i
btk/localization/: MCCLocalizer.cc  MCCLocalizer.h  Makefile.am  Makefile.in  localization.cc  localization.h  localization.i
btk/m4/: gnulib.m4  swig.m4
btk/matrix/: Makefile.am  Makefile.in  blas1_c.cc  gslmatrix.cc  gslmatrix.h  linpack_c.cc  matrix.i
btk/maximumLikelihood/: Makefile.am  Makefile.in  maximumLikelihood.cc  maximumLikelihood.h  maximumLikelihood.i
btk/measure/: Makefile.am  Makefile.in  objectiveMeasure.cc  objectiveMeasure.h  objectiveMeasure.i
btk/minimizer/: Makefile.am  Makefile.in  conjugate_pr.c  minimizer.i
btk/modulated/: Makefile.am  Makefile.in  PC_lattice.c  PC_lattice.h  SimpleFilterbank.cc  SimpleFilterbank.h  SimpleFilterbank.i  modulated.cc  modulated.h  modulated.i  prototypeDesign.cc  prototypeDesign.h  utils.cc  utils.h  utils.i
btk/objectiveMeasure/: Makefile.am  Makefile.in  objectiveMeasure.cc  objectiveMeasure.h  objectiveMeasure.i
btk/portnoff/: Makefile.am  Makefile.in  portnoff.cc  portnoff.h  portnoff.i
btk/postfilter/: Makefile.in  binauralprocessing.cc  binauralprocessing.h  gmon.out  postfilter.cc  postfilter.h  postfilter.i  spectralsubtraction.cc  spectralsubtraction.h
btk/sad/: Makefile.am  Makefile.in  ica.cc  ica.h  neural_spnsp_incl.h  sad.cc  sad.h  sad.i  sadFeature.cc  sadFeature.h
btk/shapeFactorEstimation/: Makefile.am  Makefile.in  shapeFactorEstimation.cc  shapeFactorEstimation.h  shapeFactorEstimation.i
btk/squareRoot/: Makefile.am  Makefile.in  kalman.py  squareRoot.cc  squareRoot.h  squareRoot.i
btk/src/: Makefile.am  Makefile.in
btk/stream/: Makefile.am  Makefile.in  fileStream.cc  fileStream.h  pyStream.cc  pyStream.h  stream.cc  stream.h  stream.i
btk/test/: .cvsignore  DB200.py  README  analysisSynthesis.py  btkfilter.py  cmfbTest.py  dbtest2.py  digiFilter.py  featDesc.py  featDesc.xml  filter.py  filterBankDesign.py  import-DB200x.py  import-clean.py  makeLmsMfcc.py  parser.py  pca.py  prototypeDesignTest.py  pyplay.py  sfbTest.py  snd.py  subbandBeamformer.py  testFeatADC.py  testFilterBankNew.py  utils.py
btk/tmplib/: gssBeamforming.py  mmiBeamformingG.py  mmiBeamformingSIRP.py
btk/utils/: Makefile.in  utils.cc  utils.h  utils.i
(+9 files in other folders)
